crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__a_bare_call_used_as_a_statement_releases_a_discarded_string_result.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:18
    v1 = call T::make() ! bb1  ; string
    release v1
    return
  bb1:
    propagate "m() at t.mwl:4"
}
