crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__a_bare_instance_call_used_as_a_statement_lowers_too.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @7:5-7:26
    v1 = new Foo() ! bb1  ; object
    ; stmt s1 @8:5-8:19
    v2 = call Foo::greet(this: v1) ! bb2  ; void
    return
  bb1:
    propagate "m() at t.mwl:7"
  bb2:
    propagate "m() at t.mwl:8"
}
