crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__a_bare_literal_targeting_uint_is_lowered_as_uint.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> uint {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:17
    v1 = const.uint 1  ; uint
    ; stmt s1 @5:5-5:15
    return v1
}
