crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__a_bare_new_used_as_a_statement_lowers_with_no_release.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @7:5-7:15
    v1 = new Foo()  ; object
    return
}
