crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__a_bare_void_call_used_as_a_statement_lowers_with_no_release.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:20
    v1 = call T::helper()  ; void
    return
}
