crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__a_dynamic_string_keyed_array_element_retains_the_key.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, string) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; string
    ; stmt s0 @4:5-4:26
    v2 = array.new []  ; array
    retain v1
    v3 = const.int 1  ; int
    array.set v2, v1, v3
    release v2
    release v1
    release v0
    return
}
